ffi/ztext.h


ZTEXT_API uint32_t ztextVersion(void);
ZTEXT_API uint32_t ztextFreetypeVersion(void);
ZTEXT_API uint32_t ztextHarfbuzzVersion(void);
ZTEXT_API uint32_t ztextSheenbidiVersion(void);
ZTEXT_API uint32_t ztextUnibreakVersion(void);
typedef enum ZtextResult {
  ZTEXT_RESULT_OK = 0,
  ZTEXT_RESULT_OUT_OF_MEMORY = 1,
  ZTEXT_RESULT_INVALID_ARGUMENT = 2,
  ZTEXT_RESULT_INVALID_UTF8 = 3,
  ZTEXT_RESULT_BAD_FONT = 4,
  ZTEXT_RESULT_UNSUPPORTED = 5,
  ZTEXT_RESULT_GLYPH_NOT_FOUND = 6,
  ZTEXT_RESULT_RENDER_FAILED = 7,
  ZTEXT_RESULT_SHAPE_FAILED = 8,
  ZTEXT_RESULT_BIDI_FAILED = 9,
  ZTEXT_RESULT_BUFFER_TOO_SMALL = 10,
} ZtextResult;
ZTEXT_API const char* ztextResultName(ZtextResult result);
ZTEXT_API const char* ztextLastErrorDetail(void);
typedef struct ZtextAllocator {
  void* (*allocate)(void* user, size_t size, size_t alignment);
  void* (*reallocate)(void* user, void* block, size_t old_size,
                      size_t new_size, size_t alignment);
  void (*deallocate)(void* user, void* block, size_t size, size_t alignment);
  void* user;
} ZtextAllocator;
ZTEXT_API ZtextResult ztextSetAllocator(const ZtextAllocator* alloc);
ZTEXT_API void ztextWarmup(void);
typedef struct ZtextLibrary ZtextLibrary;
typedef struct ZtextFont ZtextFont;
typedef struct ZtextFace ZtextFace;
ZTEXT_API ZtextResult ztextLibraryCreate(ZtextLibrary** out);
ZTEXT_API void ztextLibraryDestroy(ZtextLibrary* library);
ZTEXT_API ZtextResult ztextFontCreateFromMemory(ZtextLibrary* library,
                                                const void* data, size_t size,
                                                uint32_t face_index,
                                                ZtextFont** out);
ZTEXT_API void ztextFontDestroy(ZtextFont* font);
ZTEXT_API const char* ztextFontFamilyName(const ZtextFont* font);
ZTEXT_API const char* ztextFontStyleName(const ZtextFont* font);
ZTEXT_API uint32_t ztextFontGlyphIndex(const ZtextFont* font,
                                       uint32_t codepoint);
ZTEXT_API uint32_t ztextFontGlyphCount(const ZtextFont* font);
ZTEXT_API uint32_t ztextFontUnitsPerEm(const ZtextFont* font);
ZTEXT_API ZtextResult ztextFontCoveredPrefix(const ZtextFont* font,
                                             const char* utf8, size_t length,
                                             size_t* out);
typedef struct ZtextVariationAxis {
  uint32_t tag;
  float min_value;
  float default_value;
  float max_value;
} ZtextVariationAxis;
typedef struct ZtextVariation {
  uint32_t tag;
  float value;
} ZtextVariation;
ZTEXT_API uint32_t ztextFontAxisCount(const ZtextFont* font);
ZTEXT_API ZtextResult ztextFontAxis(const ZtextFont* font, uint32_t index,
                                    ZtextVariationAxis* out);
ZTEXT_API ZtextResult ztextFontSetVariations(ZtextFont* font,
                                             const ZtextVariation* values,
                                             size_t count);
ZTEXT_API ZtextResult ztextFontVariation(const ZtextFont* font, uint32_t index,
                                         float* out);
ZTEXT_API ZtextResult ztextFaceCreate(ZtextFont* font, float width,
                                      float height, ZtextFace** out);
ZTEXT_API void ztextFaceDestroy(ZtextFace* face);
ZTEXT_API ZtextFont* ztextFaceFont(const ZtextFace* face);
ZTEXT_API ZtextResult ztextFaceSetPixelSize(ZtextFace* face, float width,
                                            float height);
typedef struct ZtextFaceMetrics {
  float ascender;
  float descender;
  float line_height;
  float max_advance;
  float underline_position;
  float underline_thickness;
  uint32_t units_per_em;
  uint32_t num_glyphs;
  float pixel_size;
} ZtextFaceMetrics;
ZTEXT_API ZtextResult ztextFaceMetrics(const ZtextFace* face,
                                       ZtextFaceMetrics* out);
typedef struct ZtextShaper ZtextShaper;
typedef enum ZtextDirection {
  ZTEXT_DIRECTION_AUTO = 0,
  ZTEXT_DIRECTION_LTR = 1,
  ZTEXT_DIRECTION_RTL = 2,
  ZTEXT_DIRECTION_TTB = 3,
  ZTEXT_DIRECTION_BTT = 4,
} ZtextDirection;
typedef struct ZtextShapeParams {
  ZtextDirection direction;
  uint32_t script;
  const char* language;
  const ZtextFeature* features;
  size_t feature_count;
  ZtextClusterLevel cluster_level;
  int use_freetype_metrics;
} ZtextShapeParams;
typedef struct ZtextGlyph {
  uint32_t glyph_id;
  uint32_t cluster;
  float x_advance;
  float y_advance;
  float x_offset;
  float y_offset;
} ZtextGlyph;
ZTEXT_API ZtextResult ztextShaperCreate(ZtextShaper** out);
ZTEXT_API void ztextShaperDestroy(ZtextShaper* shaper);
ZTEXT_API ZtextResult ztextShaperShapeUtf8(ZtextShaper* shaper, ZtextFace* face,
                                           const char* text, size_t length,
                                           size_t run_offset, size_t run_length,
                                           const ZtextShapeParams* params);
ZTEXT_API size_t ztextShaperGlyphCount(const ZtextShaper* shaper);
ZTEXT_API const ZtextGlyph* ztextShaperGlyphs(const ZtextShaper* shaper);
ZTEXT_API ZtextDirection ztextShaperDirection(const ZtextShaper* shaper);
typedef struct ZtextExtents {
  float x_min;
  float y_min;
  float x_max;
  float y_max;
  float x_advance;
  float y_advance;
} ZtextExtents;
ZTEXT_API ZtextResult ztextShaperExtents(const ZtextShaper* shaper,
                                         ZtextFace* face, ZtextExtents* out);
typedef struct ZtextParagraph ZtextParagraph;
typedef enum ZtextBaseDirection {
  ZTEXT_BASE_DIRECTION_AUTO = 0,
  ZTEXT_BASE_DIRECTION_LTR = 1,
  ZTEXT_BASE_DIRECTION_RTL = 2,
} ZtextBaseDirection;
typedef struct ZtextVisualRun {
  uint32_t offset;
  uint32_t length;
  uint8_t level;
} ZtextVisualRun;
typedef struct ZtextScriptRun {
  uint32_t offset;
  uint32_t length;
  uint32_t script;
} ZtextScriptRun;
typedef struct ZtextShapingRun {
  uint32_t offset;
  uint32_t length;
  uint32_t script;
  uint8_t level;
} ZtextShapingRun;
ZTEXT_API ZtextResult ztextParagraphCreateUtf8(const char* text, size_t length,
                                               ZtextBaseDirection base,
                                               ZtextParagraph** out);
ZTEXT_API void ztextParagraphDestroy(ZtextParagraph* paragraph);
ZTEXT_API size_t ztextParagraphLength(const ZtextParagraph* paragraph);
ZTEXT_API uint8_t ztextParagraphBaseLevel(const ZtextParagraph* paragraph);
ZTEXT_API const uint8_t* ztextParagraphLevels(
    const ZtextParagraph* paragraph);
ZTEXT_API const uint8_t* ztextParagraphLineBreaks(
    const ZtextParagraph* paragraph);
ZTEXT_API const uint8_t* ztextParagraphGraphemeBreaks(
    const ZtextParagraph* paragraph);
ZTEXT_API const uint8_t* ztextParagraphWordBreaks(
    const ZtextParagraph* paragraph);
ZTEXT_API size_t ztextParagraphNextGrapheme(const ZtextParagraph* paragraph,
                                            size_t offset);
ZTEXT_API size_t ztextParagraphPreviousGrapheme(const ZtextParagraph* paragraph,
                                                size_t offset);
ZTEXT_API size_t ztextParagraphVisualRunCount(const ZtextParagraph* paragraph);
ZTEXT_API const ZtextVisualRun* ztextParagraphVisualRuns(
    const ZtextParagraph* paragraph);
ZTEXT_API size_t ztextParagraphScriptRunCount(const ZtextParagraph* paragraph);
ZTEXT_API const ZtextScriptRun* ztextParagraphScriptRuns(
    const ZtextParagraph* paragraph);
ZTEXT_API size_t ztextParagraphShapingRunCount(const ZtextParagraph* paragraph);
ZTEXT_API const ZtextShapingRun* ztextParagraphShapingRuns(
    const ZtextParagraph* paragraph);
typedef struct ZtextLine ZtextLine;
ZTEXT_API ZtextResult ztextLineCreate(const ZtextParagraph* paragraph,
                                      size_t offset, size_t length,
                                      ZtextLine** out);
ZTEXT_API void ztextLineDestroy(ZtextLine* line);
ZTEXT_API size_t ztextLineOffset(const ZtextLine* line);
ZTEXT_API size_t ztextLineLength(const ZtextLine* line);
ZTEXT_API size_t ztextLineVisualRunCount(const ZtextLine* line);
ZTEXT_API const ZtextVisualRun* ztextLineVisualRuns(const ZtextLine* line);
ZTEXT_API size_t ztextLineShapingRunCount(const ZtextLine* line);
ZTEXT_API const ZtextShapingRun* ztextLineShapingRuns(const ZtextLine* line);
typedef enum ZtextRenderMode {
  ZTEXT_RENDER_MODE_A8 = 0,
  ZTEXT_RENDER_MODE_SDF = 1,
} ZtextRenderMode;
typedef enum ZtextHinting {
  ZTEXT_HINTING_NORMAL = 0,
  ZTEXT_HINTING_LIGHT = 1,
  ZTEXT_HINTING_NONE = 2,
} ZtextHinting;
typedef struct ZtextGlyphBitmap {
  const uint8_t* pixels;
  uint32_t width;
  uint32_t height;
  int32_t pitch;
  int32_t left;
  int32_t top;
  float x_advance;
} ZtextGlyphBitmap;
ZTEXT_API ZtextResult ztextFaceRenderGlyph(ZtextFace* face, uint32_t glyph_id,
                                           ZtextRenderMode mode,
                                           ZtextHinting hinting,
                                           ZtextGlyphBitmap* out);
ZTEXT_API ZtextResult ztextFaceGlyphExtents(ZtextFace* face, uint32_t glyph_id,
                                            ZtextHinting hinting,
                                            ZtextExtents* out);
ZTEXT_API ZtextResult ztextLibrarySetSdfSpread(ZtextLibrary* library,
                                               uint32_t spread);
ZTEXT_API ZtextResult ztextLibraryCountFaces(ZtextLibrary* library,
                                             const void* data, size_t size,
                                             uint32_t* out);
typedef struct ZtextAbiLayout {
  uint32_t layout_size;
  uint32_t allocator_size;
  uint32_t allocator_align;
  uint32_t allocator_offset_allocate;
  uint32_t allocator_offset_reallocate;
  uint32_t allocator_offset_deallocate;
  uint32_t allocator_offset_user;
  uint32_t glyph_size;
  uint32_t glyph_align;
  uint32_t glyph_offset_glyph_id;
  uint32_t glyph_offset_cluster;
  uint32_t glyph_offset_x_advance;
  uint32_t glyph_offset_y_advance;
  uint32_t glyph_offset_x_offset;
  uint32_t glyph_offset_y_offset;
  uint32_t feature_size;
  uint32_t feature_align;
  uint32_t shape_params_size;
  uint32_t shape_params_align;
  uint32_t shape_params_offset_language;
  uint32_t shape_params_offset_features;
  uint32_t shape_params_offset_feature_count;
  uint32_t face_metrics_size;
  uint32_t face_metrics_align;
  uint32_t extents_size;
  uint32_t extents_align;
  uint32_t visual_run_size;
  uint32_t visual_run_align;
  uint32_t script_run_size;
  uint32_t script_run_align;
  uint32_t glyph_bitmap_size;
  uint32_t glyph_bitmap_align;
  uint32_t glyph_bitmap_offset_pixels;
  uint32_t glyph_bitmap_offset_pitch;
  uint32_t glyph_bitmap_offset_x_advance;
  uint32_t result_count;
  uint32_t result_size;
  uint32_t result_last;
  uint32_t direction_size;
  uint32_t direction_last;
  uint32_t cluster_level_size;
  uint32_t cluster_level_last;
  uint32_t base_direction_size;
  uint32_t base_direction_last;
  uint32_t render_mode_size;
  uint32_t render_mode_last;
  uint32_t hinting_size;
  uint32_t hinting_last;
} ZtextAbiLayout;
ZTEXT_API void ztextAbiLayout(ZtextAbiLayout* out);
typedef struct ZtextAbiProbe {
  ZtextAllocator allocator;
  ZtextFeature feature;
  ZtextShapeParams shape_params;
  ZtextGlyph glyph;
  ZtextFaceMetrics face_metrics;
  ZtextExtents extents;
  ZtextVisualRun visual_run;
  ZtextScriptRun script_run;
  ZtextShapingRun shaping_run;
  ZtextGlyphBitmap glyph_bitmap;
} ZtextAbiProbe;
ZTEXT_API void ztextAbiProbe(ZtextAbiProbe* out);